Строковый ресурс вынесен

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
 
     <string name="goto_login"><u>Уже с нами? Залогинься!</u></string>
     <string name="goto_register"><u>Зарегистрироваться</u></string>
+    <string name="descr_logo_image">Логотип Финансового Университета</string>
 </resources>
