--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="bottom_nav_reference">Справки</string>
     <string name="bottom_nav_profile">Профиль</string>
     <string name="profile_logout">Выйти</string>
+    <string name="timetable_today">Сегодня</string>
+    <string name="timetable_tmrw">Завтра</string>
 </resources>
